# vwi

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.ps1  build.rs  build.sh  config.example.toml  vwi.rc
src/: app.rs  config.rs  defaults.rs  hotkey.rs  logger.rs  main.rs  models.rs  overlay.rs  overlay_paint.rs  switcher.rs  tray.rs  vk.rs  windows.rs
