[package]
name = "vwi"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.62.2", features = [
	"Win32_Foundation",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_Threading",
	"Win32_UI_Input_KeyboardAndMouse",
	"Win32_Graphics_Gdi",
	"Win32_Graphics_Dwm",
	"Win32_UI_Shell",
	"Win32_System_LibraryLoader",
]}
windows-core = "0.62.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
dirs = "5.0"

[build-dependencies]
embed-resource = "2.4"
